--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <!-- HEADER -->
     <header>
         <h1>TypeSprint</h1>
-        <h2>Ecrire plus vite en s'amussent !</h2>
-        <h3>TypeSprint est une application en ligne pour apprendre à taper plus vite au clavier tout en s'amussent ;)</h3>
+        <h3>Tape plus vite, deviens un pro du clavier en t'amussant !</h3>
     </header>
 
     <!-- MAIN -->
