--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <!-- HEADER -->
     <header>
-        <h1>TypeSprint</h1>
-        <h3>Tape plus vite, deviens un pro du clavier en t'amussant !</h3>
+        <h1>Type<span>Sprint</span></h1>
+        <!-- <h3>Tape plus vite, deviens un pro du clavier en t'amussant !</h3> -->
     </header>
 
     <!-- MAIN -->
@@ -49,8 +49,8 @@
     </main>
 
     <!-- FOOTER -->
-    <footer>
+    <!-- <footer>
         @Copyright : DRA-KANE. 
-    </footer>
+    </footer> -->
 </body>
 </html>
